# stores

./: .gitignore  README.md  pyproject.toml  requirements.txt
custom_tools/: README.md  TOOLS.yml  graph.py  run_subprocess.py  sandbox.py  summarize.py
custom_tools/comms/: gmail.py  telegram.py
custom_tools/news/: reddit.py
examples/: README.md  basic.py  download_index.py  fibonacci.py  google_search.py  list_files.py  load_custom_tools.py  search_reddit.py  send_email.py  send_email_v2.py  send_telegram.py  triathlon_news.py
examples/quickstarts/: anthropic_api.py  google_gemini_auto_call.py  google_gemini_manual_call.py  langchain_w_tool_calling.py  langgraph_agent.py  litellm_w_tool_calling.py  llamaindex_agent.py  openai_agent.py  openai_chat_completions.py  openai_responses.py
examples/tutorials/: anthropic.py  anthropic_api.py  google-gemini.py  google_gemini.py  google_gemini_auto_call.py  google_gemini_manual_call.py  langchain_w_tool_calling.py  langchain_wo_tool_calling.py  langgraph_agent.py  litellm_w_tool_calling.py  litellm_wo_tool_calling.py  llamaindex_agent.py  llamaindex_w_tool_calling.py  llamaindex_wo_tool_calling.py  openai_chat_completions.py  openai_responses.py
sandbox/: Dockerfile  pyproject.toml
sandbox/launch/: entrypoint.sh
sandbox/tools/: call_tool.py  get_google_results.py  get_web_source.py  parse_utils.py  paste_from_clipboard.py  run_subprocess.py  utils.py  web_utils.py
stores/: __init__.py  constants.py  context.py  format.py  index.py  index_utils.py  parse.py  parsing.py  utils.py
stores/indexes/: __init__.py  base_index.py  index.py  local_index.py  remote_index.py  venv_utils.py
stores/prompts/: format.py  query.py  tool_template.py
stores/tools/: __init__.py  file_operations.py  reply.py  search.py
tests/: README.md
tests/mock_index/: TOOLS.yml  tools.py  tools.toml
tests/mock_index/hello/: __init__.py
tests/mock_index_custom_class/: foo.py
tests/mock_index_function_error/: foo.py  tools.toml
tests/mock_index_w_deps/: tools.toml
tests/mock_index_w_deps/mock_index/: __init__.py
tests/mock_index_w_deps_pyproject/: TOOLS.yml  pyproject.toml
tests/mock_index_w_deps_pyproject/mock_index/: __init__.py
tests/mock_index_w_deps_req/: TOOLS.yml  requirements.txt  tools.toml
tests/mock_index_w_deps_req/mock_index/: __init__.py
tests/test_format/: conftest.py  test_format.py
tests/test_index/: conftest.py  test_format_tools.py  test_index_utils.py  test_load_index.py  test_multiprocessing.py  test_remote_index.py  test_remote_tools.py  test_tool_wrappers.py
tests/test_indexes/: conftest.py  test_base_index.py  test_index.py  test_local_index.py  test_remote_index.py  test_venv_utils.py
tests/test_parse/: conftest.py  test_parse.py
tests/test_parsing/: conftest.py  test_parsing.py
