[project]
name = "stores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dirtyjson>=1.0.8",
    "dotenv>=0.9.9",
    "fuzzywuzzy>=0.18.0",
    "gitpython>=3.1.44",
    "google-api-python-client>=2.163.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "litellm>=1.63.0",
    "llm-sandbox[docker]>=0.2.3",
    "makefun>=1.15.6",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.1",
    "python-levenshtein>=0.27.1",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]


[tool.uv]
dev-dependencies = [
    "pylint==3.3.1",
    "pylint-pydantic==0.3.2",
    "ruff>=0.7.3",
    "coverage==7.6.10",
    "pytest==8.3.4",
    "pytest-asyncio>=0.25.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
log_cli = "True"