[project]
name = "stores"
version = "0.1.3"
description = "Repository of Python functions and tools for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dirtyjson>=1.0.8",
    "dotenv>=0.9.9",
    "fuzzywuzzy>=0.18.0",
    "gitpython>=3.1.44",
    "makefun>=1.15.6",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "tomli >= 1.1.0; python_version < \"3.11\"",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.49.0"]
google = ["google-genai>=1.7.0"]
openai = ["openai>=1.66.5"]
openai-agent = ["openai-agents>=0.0.7"]
langchain = ["langchain-google-genai>=2.1.0"]
langgraph = ["langchain-google-genai>=2.1.0", "langchain-core>=0.3.45", "langgraph>=0.3.16"]
litellm = ["litellm>=1.63.11"]
llamaindex = ["llama-index>=0.12.25", "llama-index-llms-google-genai>=0.1.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]


[tool.uv]
dev-dependencies = [
    "pylint==3.3.1",
    "pylint-pydantic==0.3.2",
    "ruff>=0.7.3",
    "coverage==7.6.10",
    "pytest==8.3.4",
    "pytest-asyncio>=0.25.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
log_cli = "True"
