[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [
]
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
]
dependencies = [
    "litellm==1.53.2",
    "python-dotenv==1.0.1",
    "dirtyjson==1.0.8",
    "langchain-community==0.3.9",
    "langchain-experimental==0.3.3",
    "streamlit>=1.38.0",
    "jsonschema==4.22.0",
    "psutil==5.9.4",
    "nest-asyncio==1.6.0",
    # Web parsing
    "beautifulsoup4==4.12.3",
    "markdownify==0.14.1",
    "fuzzywuzzy>=0.18.0",
]
description = "LLM-based assistant"
dynamic = ["version"]
keywords = []
license = {file = "LICENSE"}
maintainers = [
]
name = "silanthro-assistant-subcontainer"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "pylint==3.3.1",
    "pylint-pydantic==0.3.2",
    "ruff>=0.7.3",
]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.setuptools.packages.find]
include = [
    "llamaqa",
    "eval",
    "server",
]
